# splink_speed_testing

./: .gitignore  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.11-64bit/: 0006_b5b7ee569dab10ff304d1123984a2f446917fe9e_20241205_124128.json
benchmarks/: backends.py  conftest.py  decorator.py  helpers.py  test_comparison_levels.py  test_placeholder.py
splink_speed_testing/: create_tables.py  duckdb_backend.py  individual_functions.py  raw_sql_comparisons.py
