[tool.poetry]
name = "splink-speed-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-benchmark = "^5.1.0"
splink = "^4.0.5"
pyarrow = "^18.1.0"
pyspark = "^3.5.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
